[package]
name = "drive-purge-preview"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = true, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1